--- a/templates/app1/addbilling.html
+++ b/templates/app1/addbilling.html
@@ -241,7 +241,6 @@
                                         <tr>
                                             <th class="text-center"><Sl class="No"></Sl></th>
                                             <th class="text-center">Item</th>
-                                            <th class="text-center">Date</th>
                                             <th class="text-center">HSN Code</th>
                                             <th class="text-center">Quantity</th>
                                             <th class="text-center">Rate</th>
@@ -398,11 +397,11 @@
                                         <div class="col-sm-1 mt-2">:</div>
                                         <div class="col-sm-7 mt-2">
                                             <div class="d-flex">
-                                                <select name="" class="form-control" id="tcs1" onchange="calc_tcs()">
+                                                <select name="tcs" class="form-control" id="tcs1" onchange="calc_tcs()">
                                                     <option value="" selected>Select a Tax</option>
                                                     <option value="1">Cess 1%</option>
                                                 </select>
-                                                <input type="number" id="tcs_amount" name='tcs' placeholder='0' class="form-control">
+                                                <input type="number" id="tcs_amount" name='tcs_amount' placeholder='0' class="form-control">
                                             </div>
                                             <!-- <select name="" class="form-control" id="tcs1" onchange="calc_tcs()">
                                                 <option value="" selected>Select a Tax</option>
