--- a/templates/app1/salesorder.html
+++ b/templates/app1/salesorder.html
@@ -182,8 +182,8 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
                     </td>
                     <td><input type="text" name='hsn[]' id="hsn1${roinc}" placeholder='Enter HSN Code' class="form-control" style="background-color: #2f516f; color: white;" /></td>
                     <td><input type="text" name='description[]' id="description${roinc}" placeholder='Description' class="form-control" style="background-color: #2f516f; color: white;" /></td>
-                    <td><input type="number" name='qty[]' onchange="qtychange1(this)" placeholder='Enter Qty' id="qty1" class="form-control qty" step=0 min=0 style="background-color: #2f516f; color: white;" />
-                      <div><span>Available Qty :</span> <span id="qtyspan${roinc}"class='text-muted'></span></div>
+                    <td><input type="number" name='qty[]' onchange="qtychange1(this)" placeholder='Enter Qty' id="qty1" class="form-control qty" step=0 min=0 style="background-color: #2f516f;margin-top: 25px; color: white;" />
+                      <div style="margin-top: 5px;"><span>Available Qty :</span> <span id="qtyspan${roinc}"class='' ></span></div>
                     </td>
                     <td><input type="number" name='price[]' id="unit1${roinc}" placeholder='Enter Unit Price' class="form-control price" step="0.00" min="0" style="background-color: #2f516f; color: white;" /></td>
                     
@@ -252,7 +252,17 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
                     data5 = response.sgst
                     document.getElementById('hsn1').value = data
                     document.getElementById('description').value = data1
-                    document.getElementById('qtyspan').innerHTML = data2;
+                    document.getElementById('qtyspan').innerHTML =data2;
+                    if (data2<1)
+                    {
+                      
+                      
+                      document.getElementById('qtyspan').style.color="red";
+                    }
+                    else{
+                      pass
+                    }
+
                     document.getElementById('unit1').value = data3
                     
                     
@@ -296,6 +306,15 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
                     document.getElementById('description1').value = data1
                     document.getElementById('qtyspan1').innerHTML = data2;
                     document.getElementById('unit11').value = data3
+                    if (data2<1)
+                    {
+                      
+                      
+                      document.getElementById('qtyspan1').style.color="red";
+                    }
+                    else{
+                      pass
+                    }
 
                 
                     
@@ -337,6 +356,15 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
                     document.getElementById('description2').value = data1
                     document.getElementById('qtyspan2').innerHTML = data2;
                     document.getElementById('unit12').value = data3
+                    if (data2<1)
+                    {
+                      
+                      
+                      document.getElementById('qtyspan2').style.color="red";
+                    }
+                    else{
+                      pass
+                    }
                 
                     
                     if (place == '{{ cmp1.state }}')
@@ -374,6 +402,15 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
                     document.getElementById('description3').value = data1
                     document.getElementById('qtyspan3').innerHTML = data2;
                     document.getElementById('unit13').value = data3
+                    if (data2<1)
+                    {
+                      
+                      
+                      document.getElementById('qtyspan3').style.color="red";
+                    }
+                    else{
+                      pass
+                    }
                
                     
                     if (place == '{{ cmp1.state }}')
@@ -410,6 +447,15 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
                     document.getElementById('description4').value = data1
                     document.getElementById('qtyspan4').innerHTML = data2;
                     document.getElementById('unit14').value = data3
+                    if (data2<1)
+                    {
+                      
+                      
+                      document.getElementById('qtyspan4').style.color="red";
+                    }
+                    else{
+                      pass
+                    }
                   
                     
                     if (place == '{{ cmp1.state }}')
@@ -446,6 +492,15 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
                     document.getElementById('description5').value = data1
                     document.getElementById('qtyspan5').innerHTML = data2;
                     document.getElementById('unit15').value = data3
+                    if (data2<1)
+                    {
+                      
+                      
+                      document.getElementById('qtyspan5').style.color="red";
+                    }
+                    else{
+                      pass
+                    }
 
                     
                     if (place == '{{ cmp1.state }}')
@@ -483,6 +538,15 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
                     document.getElementById('description6').value = data1
                     document.getElementById('qtyspan6').innerHTML = data2;
                     document.getElementById('unit16').value = data3
+                    if (data2<1)
+                    {
+                      
+                      
+                      document.getElementById('qtyspan6').style.color="red";
+                    }
+                    else{
+                      pass
+                    }
 
                  
                     
@@ -520,6 +584,15 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
                     document.getElementById('description7').value = data1
                     document.getElementById('qtyspan7').innerHTML = data2;
                     document.getElementById('unit17').value = data3
+                    if (data2<1)
+                    {
+                      
+                      
+                      document.getElementById('qtyspan7').style.color="red";
+                    }
+                    else{
+                      pass
+                    }
                
                     
                     if (place == '{{ cmp1.state }}')
@@ -556,6 +629,16 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
                     document.getElementById('description8').value = data1
                     document.getElementById('qtyspan8').innerHTML = data2;
                     document.getElementById('unit18').value = data3
+
+                    if (data2<1)
+                    {
+                      
+                      
+                      document.getElementById('qtyspan8').style.color="red";
+                    }
+                    else{
+                      pass
+                    }
                   
                     
 
@@ -595,6 +678,16 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
                     document.getElementById('qtyspan9').innerHTML = data2;
                     document.getElementById('unit19').value = data3
 
+                    if (data2<1)
+                    {
+                      
+                      
+                      document.getElementById('qtyspan9').style.color="red";
+                    }
+                    else{
+                      pass
+                    }
+
                   
                     
                     
@@ -632,6 +725,16 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
                     document.getElementById('description10').value = data1
                     document.getElementById('qtyspan10').innerHTML = data2;
                     document.getElementById('unit110').value = data3
+                    if (data2<1)
+                    {
+                      
+                      
+                      document.getElementById('qtyspan10').style.color="red";
+                    }
+                    else{
+                      pass
+                    }
+
 
                
                     
@@ -670,6 +773,16 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
                     document.getElementById('description11').value = data1
                     document.getElementById('qtyspan11').innerHTML = data2;
                     document.getElementById('unit111').value = data3
+
+                    if (data2<1)
+                    {
+                      
+                      
+                      document.getElementById('qtyspan11').style.color="red";
+                    }
+                    else{
+                      pass
+                    }
 
                   
                     
@@ -710,6 +823,16 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
                     document.getElementById('description12').value = data1
                     document.getElementById('qtyspan12').innerHTML = data2;
                     document.getElementById('unit112').value = data3
+
+                    if (data2<1)
+                    {
+                      
+                      
+                      document.getElementById('qtyspan12').style.color="red";
+                    }
+                    else{
+                      pass
+                    }
                     
                   
                     
@@ -749,6 +872,16 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
                     document.getElementById('qtyspan13').innerHTML = data2;
                     document.getElementById('unit113').value = data3
 
+                    if (data2<1)
+                    {
+                      
+                      
+                      document.getElementById('qtyspan13').style.color="red";
+                    }
+                    else{
+                      pass
+                    }
+
                     
                     
                     if (place == '{{ cmp1.state }}')
@@ -786,6 +919,16 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
                     document.getElementById('qtyspan14').innerHTML = data2;
                     document.getElementById('unit114').value = data3
 
+                    if (data2<1)
+                    {
+                      
+                      
+                      document.getElementById('qtyspan14').style.color="red";
+                    }
+                    else{
+                      pass
+                    }
+
                     
                     if (place == '{{ cmp1.state }}')
                     {
@@ -821,6 +964,16 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
                     document.getElementById('description15').value = data1
                     document.getElementById('qtyspan15').innerHTML = data2;
                     document.getElementById('unit115').value = data3
+
+                    if (data2<1)
+                    {
+                      
+                      
+                      document.getElementById('qtyspan15').style.color="red";
+                    }
+                    else{
+                      pass
+                    }
 
                     
                     
@@ -861,6 +1014,16 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
                     document.getElementById('qtyspan16').innerHTML = data2;
                     document.getElementById('unit116').value = data3
 
+                    if (data2<1)
+                    {
+                      
+                      
+                      document.getElementById('qtyspan16').style.color="red";
+                    }
+                    else{
+                      pass
+                    }
+
                  
                     
                     
@@ -898,6 +1061,16 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
                     document.getElementById('description17').value = data1
                     document.getElementById('qtyspan17').innerHTML = data2;
                     document.getElementById('unit117').value = data3
+
+                    if (data2<1)
+                    {
+                      
+                      
+                      document.getElementById('qtyspan17').style.color="red";
+                    }
+                    else{
+                      pass
+                    }
 
                   
                     
@@ -937,6 +1110,16 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
                     document.getElementById('qtyspan18').innerHTML = data2;
                     document.getElementById('unit118').value = data3
 
+                    if (data2<1)
+                    {
+                      
+                      
+                      document.getElementById('qtyspan18').style.color="red";
+                    }
+                    else{
+                      pass
+                    }
+
                   
                     
                     
@@ -975,6 +1158,16 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
                     document.getElementById('qtyspan19').innerHTML = data2;
                     document.getElementById('unit119').value = data3
 
+                    if (data2<1)
+                    {
+                      
+                      
+                      document.getElementById('qtyspan19').style.color="red";
+                    }
+                    else{
+                      pass
+                    }
+
                     
                     
                     if (place == '{{ cmp1.state }}')
@@ -1011,6 +1204,16 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
                     document.getElementById('description20').value = data1
                     document.getElementById('qtyspan20').innerHTML = data2;
                     document.getElementById('unit120').value = data3
+
+                    if (data2<1)
+                    {
+                      
+                      
+                      document.getElementById('qtyspan20').style.color="red";
+                    }
+                    else{
+                      pass
+                    }
 
                   
                     
@@ -1227,8 +1430,8 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
                     </td>
                     <td><input type="text" name='hsn[]' id="hsn1" placeholder='Enter HSN Code' class="form-control" style="background-color: #2f516f; color: white;" /></td>
                     <td><input type="text" name='description[]' id="description" placeholder='Description' class="form-control" style="background-color: #2f516f; color: white;" /></td>
-                    <td><input type="number" name='qty[]' onchange="qtychange1(this)" placeholder='Enter Qty' id="qty1" value=0 class="form-control qty" step=0 min=0 style="background-color: #2f516f; color: white;" />
-                      <div><span>Available Qty :</span> <span id="qtyspan" class='text-muted'></span></div>
+                    <td><input type="number" name='qty[]' onchange="qtychange1(this)" placeholder='Enter Qty' id="qty1" value=0 class="form-control qty" step=0 min=0 style="background-color: #2f516f; color: white; margin-top: 27px;" />
+                      <div style="margin-top: 5Px;"><span>Available Qty :</span> <span id="qtyspan" class=''></span></div>
                     </td>
                     <td><input type="number" name='price[]' id="unit1" placeholder='Enter Unit Price' class="form-control price" step="0.00" min="0" style="background-color: #2f516f; color: white;" /></td>
                     
@@ -2477,6 +2680,7 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
             document.getElementById('qtyspan1').innerHTML = '';
           } else {
             document.getElementById('qtyspan1').innerHTML = 'Available Quantity : ' + json_data[key]['initialqty'];
+            
           }
           if (json_data[key]['item'] == 'bundle') {
             document.getElementById('unit2').value = 0;
@@ -2612,6 +2816,7 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
             document.getElementById('qtyspan2').innerHTML = '';
           } else {
             document.getElementById('qtyspan2').innerHTML = 'Available Quantity : ' + json_data[key]['initialqty'];
+            
           }
           if (json_data[key]['item'] == 'bundle') {
             document.getElementById('unit3').value = 0;
