--- a/templates/app1/trialbalance.html
+++ b/templates/app1/trialbalance.html
@@ -47,13 +47,13 @@
             padding:10px 20px;
         }
         .tr1:hover{
-            background:  rgba(0, 0, 0,0.1);
+            background:  rgb(202, 202, 13);
         }
         a:hover{
-            color: rgba(255, 255, 255,0.2);
+            color: black;
         }
         th:hover{
-          color: rgba(255, 255, 255,0.2);
+          color: black;
         }
         .hu:hover{
           color: white;
