--- a/templates/app1/addpurchasepymnt.html
+++ b/templates/app1/addpurchasepymnt.html
@@ -59,7 +59,7 @@
                                         <!-- {% for acc in accoun %}
                                             <option value="{{ acc.name }}">{{ acc.name }}</option>
                                         {% endfor %} -->
-                                        <!-- <option value="Deferred CGST">Deferred CGST</option>
+                                        <option value="Deferred CGST">Deferred CGST</option>
                                         <option value="Deferred GST Input Credit">Deferred GST Input Credit</option>
                                         <option value="Deferred IGST">Deferred IGST</option>
                                         <option value="Deferred Krishi Kalyan Cess Input Credit">Deferred Krishi
@@ -77,7 +77,7 @@
                                         <option value="Prepaid Insurance">Prepaid Insurance</option>
                                         <option value="Service Tax Refund">Service Tax Refund</option>
                                         <option value="TDS Receivable">TDS Receivable</option>
-                                        <option value="Uncategorised Asset">Uncategorised Asset</option> -->
+                                        <option value="Uncategorised Asset">Uncategorised Asset</option> 
                                     </select>
                                     <a href="{% url 'paymentcoacreate' %}"><button type="button" class="btn btn-outline-secondary ml-1">+</button></a>
                                 </div>
